<resources>
    <string name="application_name">KNX Scada</string>
    <string name="default_preference_file">pl.marek.knx_preferences</string>
    <string name="toast_icon_description">Application icon</string>
    <string name="connected">Connected</string>
    <string name="menu_preferences">Settings</string>
    <string name="ab_telegram_item">Telegrams</string>
    <string name="ab_new_project_item">New project</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="group_address_separator">/</string>
    <string name="group_address_level_label">Address type</string>
    <string name="group_address_level_2_label">2 levels</string>
    <string name="group_address_level_3_label">3 levels</string>
    <string name="cancel">Cancel</string>
    <string name="project_list_empty">No projects</string>
    <string name="controllers_list_empty">No control elements</string>
    <string name="icon_picker_title">Choose icon</string>
    <string name="dialog_new_project_title">New project</string>
    <string name="dialog_edit_project_title">Edit project</string>
    <string name="dialog_new_project_name">Project name</string>
    <string name="dialog_new_project_name_hint">Write project name</string>
    <string name="dialog_new_project_description">Description</string>
    <string name="dialog_new_project_description_hint">Describe new project</string>
    <string name="dialog_new_project_image">Image</string>
    <string name="dialog_new_project_image_hint">Choose project image...</string>
    <string name="dialog_project_add_button">Create project</string>
    <string name="dialog_project_edit_button">Save</string>
    <string name="dialog_project_cancel_button">Cancel</string>
    <string name="project_action_bar_menu_new_room">New room</string>
    <string name="project_action_bar_menu_new_element">New element</string>
    <string name="project_action_bar_menu_open_webapp">Web application</string>
    <string name="project_popup_menu_item_edit">Edit project</string>
    <string name="project_popup_menu_item_delete">Remove project</string>
    <string name="image_popup_menu_title">Image</string>
    <string name="select_image">Select image...</string>
    <string name="image_popup_menu_item_choose">Choose image</string>
    <string name="image_popup_menu_item_remove">Remove image</string>
    <string name="project_delete_confirmation_title">Delete confirmation</string>
    <string name="project_delete_confirmation_text">Do you really want to remove \"%s\ project"?</string>
    <string name="project_name_empty_title">Empty name</string>
    <string name="project_name_empty_text">Write project name!</string>
    <string name="project_add_layer_item">Add floor</string>
    <string name="webapp_server_not_started_title">Application server</string>
    <string name="webapp_server_not_started_message">Web application serwer is not started. Do you want to start it now?</string>
    <string name="connection_not_started_title">No KNX connection</string>
    <string name="connection_not_started_message">Connection to KNX bus is not established. Do you want to start it now?</string>
    <string name="dialog_new_layer_title">New floor</string>
    <string name="dialog_edit_layer_title">Edit floor</string>
    <string name="dialog_new_layer_name">Floor name</string>
    <string name="dialog_new_layer_name_hint">Write floor name</string>
    <string name="dialog_new_layer_description_hint">Description</string>
    <string name="dialog_new_layer_description">Describe floor</string>
    <string name="dialog_layer_add_button">Create floor</string>
    <string name="dialog_layer_edit_button">Save</string>
    <string name="dialog_layer_cancel_button">Cancel</string>
    <string name="dialog_new_sublayer_title">New room</string>
    <string name="dialog_edit_sublayer_title">Edit room</string>
    <string name="dialog_new_sublayer_name">Room name</string>
    <string name="dialog_new_sublayer_name_hint">Write room name</string>
    <string name="dialog_new_sublayer_description_hint">Description</string>
    <string name="dialog_new_sublayer_description">Descripbe room</string>
    <string name="dialog_sublayer_add_button">Create room</string>
    <string name="layer_name_empty_title">Empty name</string>
    <string name="layer_name_empty_text">Write layer name!</string>
    <string name="sublayer_name_empty_title">Empty name</string>
    <string name="sublayer_name_empty_text">Write room name!</string>
    <string name="layer_popup_menu_item_edit">Edit floor</string>
    <string name="layer_popup_menu_item_delete">Remove floor</string>
    <string name="sublayer_popup_menu_item_edit">Edit room</string>
    <string name="sublayer_popup_menu_item_delete">Remove room</string>
    <string name="layer_delete_confirmation_title">Delete confirmation</string>
    <string name="layer_delete_confirmation_text">Do you really want to remove \"%s\" floor?</string>
    <string name="sublayer_delete_confirmation_text">Do you really want to remove \"%s\" room?</string>
    <string name="choose_layer_msg_title">No floor selected</string>
    <string name="choose_layer_msg">Add or choose floor before you add room!</string>
    <string name="choose_sublayer_msg_title">No room selected</string>
    <string name="choose_sublayer_msg">Add or choose room before you add control element!</string>
    <string name="dialog_controller_address_label">Address</string>
    <string name="dialog_controller_name_label">Name</string>
    <string name="dialog_controller_name_hint">Write name</string>
    <string name="dialog_controller_description_label">Description</string>
    <string name="dialog_controller_description_hint">Describe</string>
    <string name="dialog_controller_cancel_button">Cancel</string>
    <string name="dialog_controller_add_button">Add</string>
    <string name="dialog_controller_edit_button">Save</string>
    <string name="dialog_controller_add_address_button">Add address</string>
    <string name="dialog_controller_remove_address_button">Remove address</string>
    <string name="dialog_controller_max_value_title">Max value</string>
    <string name="dialog_controller_max_value">Write max value!</string>
    <string name="dialog_controller_max_value_hint">0 - 255</string>
    <string name="dialog_controller_name_empty_title">Empty name</string>
    <string name="dialog_controller_name_empty">Write name!</string>
    <string name="dialog_controller_wrong_address_title">Invalid address</string>
    <string name="dialog_controller_wrong_address">Typed group address is not valid!</string>
    <string name="group_address_default_label">Group address</string>
    <string name="group_address_status_label">State</string>
    <string name="group_address_other_label">Other</string>
    <string name="element_popup_menu_item_edit">Edit element</string>
    <string name="element_popup_menu_item_delete">Delete element</string>
    <string name="telegram_ab_read_write_item">Send telegram</string>
    <string name="telegram_ab_filter_item">Filter</string>
    <string name="dialog_rw_telegram_title">Send telegram</string>
    <string name="dialog_rw_telegram_cancel_button">Cancel</string>
    <string name="dialog_rw_telegram_read_button">Read</string>
    <string name="dialog_rw_telegram_write_button">Write</string>
    <string name="dialog_rw_telegram_address">Address</string>
    <string name="dialog_rw_telegram_data_type">Data type</string>
    <string name="dialog_rw_telegram_function">Function</string>
    <string name="dialog_rw_telegram_value">Value</string>
    <string-array name="dialog_rw_data_types">
        <item name="data_type_binary">Binary (1 bit)</item>
        <item name="data_type_controlled">Controlled (3 bity)</item>
        <item name="data_type_unsigned_1byte">Unsigned (1 bajt)</item>
        <item name="data_type_unsigned_2bytes">Unsigned (2 bajty)</item>
        <item name="data_type_unsigned_4bytes">Unsigned (4 bajty)</item>
		<item name="data_type_float">Float (2 bajty)</item>
		<item name="data_type_date">Date</item>
		<item name="data_type_time">Time</item>
		<item name="data_type_datetime">Datetime</item>
		<item name="data_type_string">Text</item>
    </string-array>
    <string name="dialog_rw_telegram_wrong_address_title">Warning</string>
    <string name="dialog_rw_telegram_wrong_address_msg">You type invalid group address!</string>
    <string name="telegram_filter">Filter</string>
    <string name="telegram_source_address">Source address</string>
    <string name="telegram_destination_address">Destination address</string>
    <string name="telegram_from_date">From</string>
    <string name="telegram_to_date">To</string>
    <string name="telegram_type">Type</string>
    <string name="telegram_type_read">Read</string>
    <string name="telegram_type_write">Write</string>
    <string name="telegram_type_response">Response</string>
    <string name="telegram_priority">Priority</string>
    <string name="telegram_priority_low">Low</string>
    <string name="telegram_priority_normal">Normal</string>
    <string name="telegram_priority_urgent">Urgent</string>
    <string name="telegram_priority_system">System</string>
    <string name="telegram_filter_apply_button">Show telegrams</string>
    <string name="connection_service_connecting">Connecting to KNX bus</string>
    <string name="connection_service_connected">Connection established</string>
    <string name="connection_service_disconnecting">Disconnecting from KNX bus</string>
    <string name="connection_service_disconnected">KNX bus disconnected</string>
    <string name="connection_service_failed">KNX bus connection failed</string>
    <string name="connection_service_unknown">Unknown connection state</string>
    <string name="connection_service_title">KNX bus connection</string>
    <string name="connection_service_message">Connected</string>
    <string name="webserver_service_starting">Web server starting</string>
    <string name="webserver_service_started">Web server started</string>
    <string name="webserver_service_stopping">Stopping web server</string>
    <string name="webserver_service_stopped">Web server stopped</string>
    <string name="webserver_service_failed">Web server failure</string>
    <string name="webserver_service_unknown">Unknown web server state</string>
    <string name="webserver_service_deploy">Preparing web application</string>
    <string name="webserver_service_title">Web server</string>
    <string name="webserver_service_message">Started</string>
	<string name="telegrams_activity_title">Telegrams</string>
	<string name="telegrams_activity_details_title">Telegram - details</string>
	<string name="telegrams_item_from_label">From:</string>
	<string name="telegrams_item_to_label">To:</string>
	<string name="telegrams_item_image_description">Priority icon</string>
	<string name="telegram_detail_id_label">ID</string>
	<string name="telegram_detail_time_label">Time</string>
	<string name="telegram_detail_priority_label">Priority</string>
	<string name="telegram_detail_source_address_label">Source</string>
	<string name="telegram_detail_destination_address_label">Destination</string>
	<string name="telegram_detail_hopcount_label">Hop count</string>
	<string name="telegram_detail_type_label">Type</string>
	<string name="telegram_detail_msgCode_label">Code</string>
	<string name="telegram_detail_rawdata_label">Data</string>
	<string name="telegram_detail_data_label">Value</string>
	<string name="telegram_detail_rawframe_label">Frame</string>
	<string name="telegram_detail_framelength_label">Frame length</string>
	<string name="telegram_detail_dptid_label">Data type</string>
	<string name="telegram_detail_ack_label">ACK</string>
	<string name="telegram_detail_confirmation_label">Confirmation</string>
	<string name="telegram_detail_repeated_label">Repeated</string>
	<string name="element_switch">Switch</string>
</resources>